# GamepadController

./: CMakeLists.txt  makefile  run_tests.sh
GeneratedSource/: QtJoypadListener.cpp
Include/: ApplicationShortcutsBase.hpp  ArrowsToArrowsPresser.hpp  ButtonsAndAxisStateKeeper.hpp  ButtonsAxisStateKeeper.hpp  ChromeShortcuts.hpp  ClementineShortcuts.hpp  ConfigStore.hpp  DesktopSwitcher.hpp  DolphinShortcuts.cpp  DolphinShortcuts.hpp  IApplicationShortcuts.hpp  IConfigStore.hpp  IKeyPresser.hpp  IProcessesNamesSaver.hpp  ISystemController.hpp  InactivityFilter.hpp  JoypadAxis.hpp  JoypadButton.hpp  JoypadHandler.hpp  JoypadListener.hpp  KeyPresser.hpp  KtorrentShortcuts.hpp  Logger.hpp  MouseMover.hpp  MouseScrooler.hpp  PreciseMouseMover.hpp  PressedOrReleased.hpp  ProcessesNamesSaver.hpp  SteamGamesFilter.hpp  SystemController.hpp  VlcShortcuts.hpp  WormsShortcuts.hpp
Mock/: ConfigStoreMock.hpp  SystemControllerMock.hpp
Source/: ApplicationShortcutsBase.cpp  ArrowsToArrowsPresser.cpp  ButtonsAndAxisStateKeeper.cpp  ChromeShortcuts.cpp  ClementineShortcuts.cpp  ConfigStore.cpp  DesktopSwitcher.cpp  DolphinShortcuts.cpp  InactivityFilter.cpp  JoypadAxis.cpp  JoypadButton.cpp  JoypadHandler.cpp  JoypadListener.cpp  KeyPresser.cpp  KtorrentShortcuts.cpp  MouseMover.cpp  MouseScrooler.cpp  PreciseMouseMover.cpp  PressedOrReleased.cpp  ProcessesNamesSaver.cpp  SteamGamesFilter.cpp  SystemController.cpp  VlcShortcuts.cpp  WormsShortcuts.cpp  getkey.cpp  main.cpp
Test/: ChromeTests.cpp  ClementineTests.cpp  DesktopSwichingTests.cpp  DolphinTests.cpp  JoypadHandlerTestBase.hpp  VlcTests.cpp  tests.cpp
